chore: 프로젝트 코드 스타일 통일