@@ -14,6 +14,7 @@ import com.example.aitalk.domain.member.MemberRepository;
 import com.example.aitalk.infra.s3.S3Uploader;
 
 import lombok.RequiredArgsConstructor;
+
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -27,201 +28,202 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 public class CommunityPostService {
 
-    private final CommunityPostRepository communityPostRepository;
-    private final MemberRepository memberRepository;
-    private final CommentRepository commentRepository;
-    private final LikeRepository likeRepository;
-    private final S3Uploader s3Uploader;
+	private final CommunityPostRepository communityPostRepository;
+	private final MemberRepository memberRepository;
+	private final CommentRepository commentRepository;
+	private final LikeRepository likeRepository;
+	private final S3Uploader s3Uploader;
 
-    public void createPost(CommunityPostRequestDTO dto, Member member) throws IOException {
+	public void createPost(CommunityPostRequestDTO dto, Member member) throws IOException {
 
-        CommunityPost post = new CommunityPost();
-        post.setMember(member);
-        post.setCategory(dto.getCategory());
-        post.setTitle(dto.getTitle());
-        post.setContent(dto.getContent());
+		CommunityPost post = new CommunityPost();
+		post.setMember(member);
+		post.setCategory(dto.getCategory());
+		post.setTitle(dto.getTitle());
+		post.setContent(dto.getContent());
 
-        if (dto.getImage() != null && !dto.getImage().isEmpty()) {
-            String imageUrl = s3Uploader.upload(dto.getImage());
-            post.setImage(imageUrl);
-        }
+		if (dto.getImage() != null && !dto.getImage().isEmpty()) {
+			String imageUrl = s3Uploader.upload(dto.getImage());
+			post.setImage(imageUrl);
+		}
 
-        communityPostRepository.save(post);
-    }
+		communityPostRepository.save(post);
+	}
 
-    // 단건 조회 후 DTO 변환
-    @Transactional(readOnly = true)
-    public CommunityPostResponseDTO getPostById(Long id, Member loginUser) {
-        CommunityPost post = getPostOrThrow(id);
+	// 단건 조회 후 DTO 변환
+	@Transactional(readOnly = true)
+	public CommunityPostResponseDTO getPostById(Long id, Member loginUser) {
+		CommunityPost post = getPostOrThrow(id);
 
-        boolean liked = false;
-        if (loginUser != null) {
-            liked = likeRepository.existsByMemberAndPost(loginUser, post);
-        }
+		boolean liked = false;
+		if (loginUser != null) {
+			liked = likeRepository.existsByMemberAndPost(loginUser, post);
+		}
 
-        return convertToResponseDTO(post, true, liked);
-    }
+		return convertToResponseDTO(post, true, liked);
+	}
 
-    // 페이징 목록 조회 후 DTO 변환
-    public List<CommunityPostResponseListDTO> getAllPosts(Sort sort) {
-        List<CommunityPost> postList = communityPostRepository.findAll(sort);
+	// 페이징 목록 조회 후 DTO 변환
+	public List<CommunityPostResponseListDTO> getAllPosts(Sort sort) {
+		List<CommunityPost> postList = communityPostRepository.findAll(sort);
 
-        return postList.stream()
-                .map(post -> {
-                    int commentCount = commentRepository.countByPost(post);  // 댓글 수 조회
-                    return convertToListDTO(post, commentCount);              // 댓글 수만 포함
-                })
-                .toList();
-    }
-    private CommunityPostResponseListDTO convertToListDTO(CommunityPost post, int commentCount) {
-        String nickname = post.getMember() != null ? post.getMember().getNickname() : "알 수 없음";
+		return postList.stream()
+			.map(post -> {
+				int commentCount = commentRepository.countByPost(post);  // 댓글 수 조회
+				return convertToListDTO(post, commentCount);              // 댓글 수만 포함
+			})
+			.toList();
+	}
 
-        return new CommunityPostResponseListDTO(
-                post.getId(),
-                nickname,
-                post.getCategory(),
-                post.getTitle(),
-                post.getContent(),
-                post.getImage(),
-                post.getLikeCount(),
-                commentCount
-        );
-    }
+	private CommunityPostResponseListDTO convertToListDTO(CommunityPost post, int commentCount) {
+		String nickname = post.getMember() != null ? post.getMember().getNickname() : "알 수 없음";
 
-    // 변환 메서드
-    private CommunityPostResponseDTO convertToResponseDTO(CommunityPost post, boolean includeComments, boolean liked) {
-        Member writer = post.getMember();
-        String nickname = writer != null ? writer.getNickname() : "알 수 없음";
-        Long userId = writer != null ? writer.getId() : null;
+		return new CommunityPostResponseListDTO(
+			post.getId(),
+			nickname,
+			post.getCategory(),
+			post.getTitle(),
+			post.getContent(),
+			post.getImage(),
+			post.getLikeCount(),
+			commentCount
+		);
+	}
 
-        List<CommentResponseDTO> commentDTOs = null;
-        if (includeComments) {
-            commentDTOs = commentRepository.findByPostId(post.getId()).stream()
-                    .map(comment -> new CommentResponseDTO(
-                            comment.getId(),
-                            comment.getMember().getNickname(),
-                            comment.getMember().getId(),
-                            comment.getContent(),
-                            comment.getCreatedAt()
-                    ))
-                    .toList();
-        }
+	// 변환 메서드
+	private CommunityPostResponseDTO convertToResponseDTO(CommunityPost post, boolean includeComments, boolean liked) {
+		Member writer = post.getMember();
+		String nickname = writer != null ? writer.getNickname() : "알 수 없음";
+		Long userId = writer != null ? writer.getId() : null;
 
-        return new CommunityPostResponseDTO(
-                post.getId(),
-                nickname,
-                userId,
-                post.getCategory(),
-                post.getTitle(),
-                post.getContent(),
-                post.getImage(),
-                post.getLikeCount(),
-                commentDTOs,
-                liked
-        );
-    }
+		List<CommentResponseDTO> commentDTOs = null;
+		if (includeComments) {
+			commentDTOs = commentRepository.findByPostId(post.getId()).stream()
+				.map(comment -> new CommentResponseDTO(
+					comment.getId(),
+					comment.getMember().getNickname(),
+					comment.getMember().getId(),
+					comment.getContent(),
+					comment.getCreatedAt()
+				))
+				.toList();
+		}
 
-    // 게시글 수정
-    public void updatePost(Long postId, CommunityPostRequestDTO dto, Member member) throws IOException {
+		return new CommunityPostResponseDTO(
+			post.getId(),
+			nickname,
+			userId,
+			post.getCategory(),
+			post.getTitle(),
+			post.getContent(),
+			post.getImage(),
+			post.getLikeCount(),
+			commentDTOs,
+			liked
+		);
+	}
 
-        CommunityPost post = getPostOrThrow(postId);
+	// 게시글 수정
+	public void updatePost(Long postId, CommunityPostRequestDTO dto, Member member) throws IOException {
 
-        validatePostOwner(post, member.getId());
+		CommunityPost post = getPostOrThrow(postId);
 
-        post.setCategory(dto.getCategory());
-        post.setTitle(dto.getTitle());
-        post.setContent(dto.getContent());
-        if (dto.getImage() != null && !dto.getImage().isEmpty()) {
-            String imageUrl = s3Uploader.upload(dto.getImage());
-            post.setImage(imageUrl);
-        }
+		validatePostOwner(post, member.getId());
 
-        communityPostRepository.save(post);
-    }
+		post.setCategory(dto.getCategory());
+		post.setTitle(dto.getTitle());
+		post.setContent(dto.getContent());
+		if (dto.getImage() != null && !dto.getImage().isEmpty()) {
+			String imageUrl = s3Uploader.upload(dto.getImage());
+			post.setImage(imageUrl);
+		}
 
-    // 게시글 삭제
-    public void deletePost(Long postId, Member member) {
-        CommunityPost post = getPostOrThrow(postId);
+		communityPostRepository.save(post);
+	}
 
-        validatePostOwner(post, member.getId());
+	// 게시글 삭제
+	public void deletePost(Long postId, Member member) {
+		CommunityPost post = getPostOrThrow(postId);
 
-        communityPostRepository.delete(post);
-    }
+		validatePostOwner(post, member.getId());
 
-    // 본인이 작성한 게시글 목록
-    @Transactional(readOnly = true)
-    public List<CommunityPostResponseListDTO> getMyPosts(Member member) {
+		communityPostRepository.delete(post);
+	}
 
-        List<CommunityPost> posts = communityPostRepository.findByMember(member).stream()
-                .sorted(Comparator.comparing(CommunityPost::getId).reversed()) // ID 내림차순 정렬
-                .toList();
+	// 본인이 작성한 게시글 목록
+	@Transactional(readOnly = true)
+	public List<CommunityPostResponseListDTO> getMyPosts(Member member) {
 
-        return posts.stream()
-                .map(post -> {
-                    int commentCount = commentRepository.countByPost(post);
-                    return convertToListDTO(post, commentCount);
-                })
-                .collect(Collectors.toList());
-    }
+		List<CommunityPost> posts = communityPostRepository.findByMember(member).stream()
+			.sorted(Comparator.comparing(CommunityPost::getId).reversed()) // ID 내림차순 정렬
+			.toList();
 
-    // 좋아요 기능
-    public void likePost(Long postId, Member member) {
-        CommunityPost post = getPostOrThrow(postId);
+		return posts.stream()
+			.map(post -> {
+				int commentCount = commentRepository.countByPost(post);
+				return convertToListDTO(post, commentCount);
+			})
+			.collect(Collectors.toList());
+	}
 
-        if (likeRepository.existsByMemberAndPost(member, post)) {
-            throw new BusinessException(ErrorCode.ALREADY_LIKED);
-        }
+	// 좋아요 기능
+	public void likePost(Long postId, Member member) {
+		CommunityPost post = getPostOrThrow(postId);
 
-        likeRepository.save(new Like(member, post));
-    }
+		if (likeRepository.existsByMemberAndPost(member, post)) {
+			throw new BusinessException(ErrorCode.ALREADY_LIKED);
+		}
 
-    // 좋아요 취소
-    public void unlikePost(Long postId, Member member) {
-        CommunityPost post = getPostOrThrow(postId);
+		likeRepository.save(new Like(member, post));
+	}
 
-        Like like = likeRepository.findByMemberAndPost(member, post)
-            .orElseThrow(() -> new BusinessException(ErrorCode.NOT_LIKED));
+	// 좋아요 취소
+	public void unlikePost(Long postId, Member member) {
+		CommunityPost post = getPostOrThrow(postId);
 
-        likeRepository.delete(like);
-    }
+		Like like = likeRepository.findByMemberAndPost(member, post)
+			.orElseThrow(() -> new BusinessException(ErrorCode.NOT_LIKED));
 
-    @Transactional(readOnly = true)
-    public List<CommunityPostResponseListDTO> getLikedPosts(Member member) {
-        List<Like> likes = likeRepository.findByMember(member);
+		likeRepository.delete(like);
+	}
 
-        return likes.stream()
-                .map(Like::getPost)
-                .sorted(Comparator.comparing(CommunityPost::getId).reversed())  // ID 기준 내림차순 정렬
-                .map(post -> {
-                    int commentCount = commentRepository.countByPost(post);     // 댓글 수 조회
-                    return convertToListDTO(post, commentCount);                // 리스트용 DTO로 변환
-                })
-                .toList();
-    }
+	@Transactional(readOnly = true)
+	public List<CommunityPostResponseListDTO> getLikedPosts(Member member) {
+		List<Like> likes = likeRepository.findByMember(member);
 
-    @Transactional(readOnly = true)
-    public List<CommunityPostResponseListDTO> searchPosts(String keyword) {
-        List<CommunityPost> posts = communityPostRepository
-                .findByTitleContainingIgnoreCaseOrContentContainingIgnoreCaseOrderByIdDesc(keyword, keyword);
+		return likes.stream()
+			.map(Like::getPost)
+			.sorted(Comparator.comparing(CommunityPost::getId).reversed())  // ID 기준 내림차순 정렬
+			.map(post -> {
+				int commentCount = commentRepository.countByPost(post);     // 댓글 수 조회
+				return convertToListDTO(post, commentCount);                // 리스트용 DTO로 변환
+			})
+			.toList();
+	}
 
-        return posts.stream()
-                .map(post -> {
-                    int commentCount = commentRepository.countByPost(post);
-                    return convertToListDTO(post, commentCount);
-                })
-                .collect(Collectors.toList());
-    }
+	@Transactional(readOnly = true)
+	public List<CommunityPostResponseListDTO> searchPosts(String keyword) {
+		List<CommunityPost> posts = communityPostRepository
+			.findByTitleContainingIgnoreCaseOrContentContainingIgnoreCaseOrderByIdDesc(keyword, keyword);
 
-    // ID를 통한 CommunityPost 엔티티 조회
-    private CommunityPost getPostOrThrow(Long postId) {
-        return communityPostRepository.findById(postId)
-            .orElseThrow(() -> new BusinessException(ErrorCode.NOT_FOUND_POST));
-    }
+		return posts.stream()
+			.map(post -> {
+				int commentCount = commentRepository.countByPost(post);
+				return convertToListDTO(post, commentCount);
+			})
+			.collect(Collectors.toList());
+	}
 
-    // 작성자 권한 검증
-    private void validatePostOwner(CommunityPost post, Long userId) {
-        if (!post.getMember().getId().equals(userId)) {
-            throw new BusinessException(ErrorCode.NO_PERMISSION);
-        }
-    }
+	// ID를 통한 CommunityPost 엔티티 조회
+	private CommunityPost getPostOrThrow(Long postId) {
+		return communityPostRepository.findById(postId)
+			.orElseThrow(() -> new BusinessException(ErrorCode.NOT_FOUND_POST));
+	}
+
+	// 작성자 권한 검증
+	private void validatePostOwner(CommunityPost post, Long userId) {
+		if (!post.getMember().getId().equals(userId)) {
+			throw new BusinessException(ErrorCode.NO_PERMISSION);
+		}
+	}
 }
